Fixed pizza updating and deleting routes
